--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-LANGCHAIN_API_KEY = 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
-DASHVECTOR_API_KEY = sk-f8f051de1d09466d97adc7335aaf24fd
-DASHSCOPE_API_KEY = sk-f8f051de1d09466d97adc7335aaf24fd
+LANGCHAIN_API_KEY = your_api_key_here
+DASHVECTOR_API_KEY = your_api_key_here
+DASHSCOPE_API_KEY = your_api_key_here
